# clause-harness

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  TAXONOMY.md  pyproject.toml  requirements.txt
evals/golden/: golden_set.jsonl
scripts/: build_golden_set.py  test_api.py
src/: build_golden_set.py  label_golden_set.py  review.py  validate.py
tests/: test_validate.py
