[project]
name = "clause-harness"
version = "0.1.0"
description = "LLM harness for contract clause review with an escalation loop and eval harness over CUAD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = []
